--- a/Mobile/www/views/app/locations/comments.html
+++ b/Mobile/www/views/app/locations/comments.html
@@ -22,7 +22,7 @@
 
             <div class="list">
 
-                <span class="item item-avatar" ng-repeat="comment in selectedLocation.Comments" style="border:0px!important;border-bottom: 2px solid #181918!important;">
+                <span class="item item-avatar" ng-repeat="comment in location.Comments" style="border:0px!important;border-bottom: 2px solid #181918!important;">
                     <img ng-src="{{comment.UserImgPath}}" style="margin-left:0px!important;    margin-top: 0px!important">
                     <a href="directions.html">{{comment.UserName}}</a>
                     <p>{{comment.Comment}}</p>
