--- a/Web/views/admin-partials/locations.html
+++ b/Web/views/admin-partials/locations.html
@@ -22,14 +22,14 @@
             <tr role="row" class="heading">
 
                 <th width="20%"> Mekan Adi </th>
-                <th width="20%"> Mekan Tipi </th>
-                <th width="20%"> Resim Sayısı </th>
-                <th width="20%"> Açıklama </th>
+                <th width="12%"> Mekan Tipi </th>
+                <th width="15%"> Resim Sayısı </th>
+                <th width="15%"> Açıklama </th>
                 <th width="20"> Enlem </th>
-                <th width="20%"> Boylam </th>
-                <th width="20"> Beğenilme Sayısı </th>
-                <th width="20%"> Yorum Sayısı </th>
-                <th width="20%"> İşlemler </th>
+                <th width="20"> Boylam </th>
+                <th width="13%"> Beğenilme Sayısı </th>
+                <th width="15%"> Yorum Sayısı </th>
+                <th width="10%"> İşlemler </th>
 
             </tr>
             <tr role="row" class="filter" ng-repeat="location in locations">
