--- a/Web/assets/layouts/layout3/css/custom.css
+++ b/Web/assets/layouts/layout3/css/custom.css
@@ -99,17 +99,23 @@ body {
     left: 18.5%;
     overflow: hidden;
     margin-left: -10%;
-    z-index: 9999
+    z-index: 9999;
 }
 
 .page-sidebar .page-sidebar-menu {
     margin-top: 70px;
 }
+
 .modal {
     z-index: 10050 !important;
 }
 
 .modal-open {
-    overflow: hidden!important;
+    overflow: hidden !important;
     position: relative;
+}
+
+.cbp img {
+    min-height: 300px !important;
+    max-height: 300px !important;
 }
