--- a/Web/views/partials/locationFull.html
+++ b/Web/views/partials/locationFull.html
@@ -23,7 +23,7 @@
                             </uib-carousel>
                         </div>
                         <div class="blog-single-desc">
-                            <div ng-bind-html="to_trusted(location.Info)">
+                            <div  style="max-width:100%;overflow: hidden;" ng-bind-html="to_trusted(location.Info)">
 
                             </div>
                         </div>
