--- a/Mobile/www/views/app/locations/details.html
+++ b/Mobile/www/views/app/locations/details.html
@@ -65,7 +65,7 @@
 
             </div>
             <div class="col col-20 col-center" ng-if="!location.IsLiked">
-                <button class="button  button-calm   icon icon-left ion-ios-star" ng-click="like(location.ID)">
+                <button class="button  button-calm   icon icon-left ion-ios-star-outline" ng-click="like(location.ID)">
                     {{location.LikeCount}}
                 </button>
             </div>
