--- a/Mobile/www/views/app/locations/directions.html
+++ b/Mobile/www/views/app/locations/directions.html
@@ -24,7 +24,7 @@
         <div id="directionsList" data-tap-disabled="true" style="height:auto;width:100%">
         </div>
     </ion-content>
-    <ion-footer-bar class="post-footer bar bar-footer bar-calm" style="background-color:#21692E!important">
+    <ion-footer-bar class="post-footer bar bar-footer bar-calm" style="background-color:transparent!important">
         <div class="row">
             <div class="col col-40  col-offset-66 col-center">
                 <a class="button button-calm" ng-click="close()">Kapat</a>
