--- a/Mobile/www/views/app/locations/home.html
+++ b/Mobile/www/views/app/locations/home.html
@@ -50,7 +50,7 @@
                             <button ng-if="location.IsLiked" class="button button-block button-assertive  button-small icon icon-left ion-ios-star" style="margin-right:10px" ng-click="unlike(location.ID)">
                                 {{location.LikeCount}}
                             </button>
-                            <button ng-if="!location.IsLiked" class="button button-block button-calm  button-small icon icon-left ion-ios-star " style="margin-right:10px" ng-click="like(location.ID)">
+                            <button ng-if="!location.IsLiked" class="button button-block button-calm  button-small icon icon-left ion-ios-star-outline " style="margin-right:10px" ng-click="like(location.ID)">
                                 {{location.LikeCount}}
                             </button>
                         </div>
