--- a/Web/views/partials/account.html
+++ b/Web/views/partials/account.html
@@ -126,8 +126,8 @@
                                                     <div class="timeline-body-head">
                                                         <div class="timeline-body-head-caption">
                                                             <a href="javascript:;" class="timeline-body-title font-blue-madison">
-                                                                {{user.Name}} <a ui-sref="home.locationDetails({locationId: comment.LocationId   })">{{comment.LocationName}}</a>
-                                                                mekanına yorum yaptı.
+                                                                {{user.Name}}, <a ui-sref="home.locationDetails({locationId: comment.LocationId   })">{{comment.LocationName}}</a>
+                                                               mekanına yorum yaptı.
                                                             </a>
                                                             <span class="timeline-body-time font-grey-cascade" am-time-ago="comment.Date"></span>
                                                         </div>
