--- a/Mobile/www/views/app/locations/home.html
+++ b/Mobile/www/views/app/locations/home.html
@@ -62,7 +62,7 @@
 
                         <div class="col text-left" style="padding-right: 10px;">
 
-                            <button class="button  button-block button-royal button-small icon icon-left" ng-click="open($index)">Rota</button>
+                            <button class="button  button-block button-royal button-small icon icon-left" ng-click="open($index)" ng-disabled="location.DistanceToUser<=0">Rota</button>
 
                         </div>
                     </div>
