--- a/Web/views/admin-partials/header.html
+++ b/Web/views/admin-partials/header.html
@@ -1,7 +1,7 @@
 ﻿<div class="page-header navbar navbar-fixed-top">
     <div class="page-header-inner ">
         <div class="page-logo">
-            <a href="index.html">
+            <a ui-sref="home.locations">
                 <img src="assets/img/logoadmin.png" alt="logo" class="logo-default" style="margin: 4px -6px 0;" />
             </a>
         </div>
@@ -30,7 +30,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a ng-show="showAdminPanel" ui-sref="admin">
+                                <a ng-show="showAdminPanel" ui-sref="admin.locations">
                                     <i class="icon-key"></i> Admin Panel
                                 </a>
                             </li>
