--- a/Web/views/admin-partials/locations.html
+++ b/Web/views/admin-partials/locations.html
@@ -24,7 +24,7 @@
                 <th width="20%"> Mekan Adi </th>
                 <th width="12%"> Mekan Tipi </th>
                 <th width="15%"> Resim Sayısı </th>
-                <th width="15%"> Açıklama </th>
+                <!--<th width="15%"> Açıklama </th>-->
                 <th width="20"> Enlem </th>
                 <th width="20"> Boylam </th>
                 <th width="15%"> Beğenilme Sayısı </th>
@@ -36,7 +36,7 @@
                 <td> {{location.Name}} </td>
                 <td> {{location.TypeName}} </td>
                 <td> {{location.ImageCount}} </td>
-                <td> {{location.Info |strLimit:100}}</td> 
+                <!--<td> {{location.Info |strLimit:100}}</td>--> 
                 <td> {{location.Latitude  | number : 3}} </td>
                 <td> {{location.Longtitude | number : 3}} </td>
                 <td> {{location.LikeCount}} </td>
