--- a/Web/views/partials/comments.html
+++ b/Web/views/partials/comments.html
@@ -2,7 +2,7 @@
     <div class="portlet box green-dark">
         <div class="portlet-title">
             <div class="caption">
-                <i class="fa fa-gift"></i>Yorumlar({{location.CommentCount}})
+                <i class="fa fa-gift"></i>Yorumlar({{location.Comments.length}})
             </div>
         </div>
     </div>
