--- a/Web/views/partials/header.html
+++ b/Web/views/partials/header.html
@@ -41,7 +41,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a ng-show="showAdminPanel" ui-sref="admin">
+                                        <a ng-show="showAdminPanel" ui-sref="admin.locations">
                                             <i class="icon-key"></i> Admin Panel
                                         </a>
                                     </li>
