--- a/Mobile/www/views/app/locations/home.html
+++ b/Mobile/www/views/app/locations/home.html
@@ -1,5 +1,5 @@
 ﻿<div class="wordpress-view">
- 
+
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
@@ -25,7 +25,7 @@
                 </ui-select-choices>
             </ui-select>
         </div>
-      
+
         <div class="posts-list">
             <div ng-repeat="location in locations" class="list card post-item">
                 <div class="post-heading item item-text-wrap">
@@ -69,10 +69,20 @@
                 </div>
             </div>
         </div>
-        <!-- Infinit scroll -->
-        <ion-infinite-scroll ng-if="moreDataCanBeLoaded()" on-infinite="loadMoreData()" distance="1%" icon="ion-loading-c">
-        </ion-infinite-scroll>
+
     </ion-content>
+    <ion-footer-bar style="background-color:transparent!important">
+        <div class="row">
+
+            <div class="col col-center">
+                <button ng-disabled="empty" class="button button-block button-small button-energized icon icon-left ion-refresh" ng-click="refresh(location.ID)" style="color:black">
+                    Daha Fazla Yükle
+                </button>
+
+            </div>
+
+        </div>
+    </ion-footer-bar>
 </div>
 
 
